--- a/web/index.html
+++ b/web/index.html
@@ -16,11 +16,11 @@
   >
     <div class="box">
       <div class="row content">
-        Gray: Bots.<br>
-        Yellow: Bought off exchanges.<br>
-        Green: Team Members sold to exchanges.<br>
-        Pink: Distributed directly to exchange.<br>
-        Blue: Distributed to unknown accounts or tipbot.<br>
+        Gray: Bots.<br />
+        Yellow: Bought off exchanges.<br />
+        Green: Team Members sold to exchanges.<br />
+        Pink: Distributed directly to exchange.<br />
+        Blue: Distributed to unknown accounts or tipbot.<br />
         <div id="sankey" class="sankey w100pct">
           <svg id="sankeySvg"></svg>
         </div>
