adding support for received blocks, but not displaying

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <body onload="onLoad()">
     Yellow: Distribution.<br />
     Green: Distributed to Team Members.<br />
-    Brown: Distributed to Unknown Parties.<br />
+    Gray: Distributed to Unknown Parties.<br />
     Blue: Distributed to Known Parties.<br />
     <div id="sankey" class="sankey w100pct">
       <svg id="sankeySvg"></svg>
