--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,13 @@
   </head>
 
   <body onload="onLoad()">
-    Yellow: Distribution.<br />
-    Green: Distributed to Team Members.<br />
-    Gray: Distributed to Unknown Parties.<br />
-    Blue: Distributed to Known Parties.<br />
+    Yellow: Remaining Distribution (I.E. uncirculated Banano).<br />
+    Green: Distributed to Team Members (I.E. Coranos, Voted Best Dev 2021).<br />
+    Gray: Distributed to Unknown Parties (I.E. Addresses not on tipbots, and not
+    linked to any known identites).<br />
+    Blue: Distributed to Known Parties (I.E. Tipbot Members, Former Team
+    Members).<br />
+    Pink: Burned (I.E. Gone).<br />
     <div id="sankey" class="sankey w100pct">
       <svg id="sankeySvg"></svg>
     </div>
