--- a/web/index.html
+++ b/web/index.html
@@ -12,9 +12,12 @@
     Green: Distributed to Team Members (I.E. Coranos, Voted Best Dev 2021).<br />
     Gray: Distributed to Unknown Parties (I.E. Addresses not on tipbots, and not
     linked to any known identites).<br />
-    Blue: Distributed to Known Parties (I.E. Tipbot Members, Former Team
+    Grayish blue: Distributed to Known Parties (I.E. Tipbot Members, Former Team
     Members).<br />
     Pink: Burned (I.E. Gone).<br />
+    <div id="linktext" class="w100pct">
+      Click to select a value to display here.
+    </div>
     <div id="sankey" class="sankey w100pct">
       <svg id="sankeySvg"></svg>
     </div>
