--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 
   <body onload="onLoad()">
     Yellow: Remaining Distribution (I.E. uncirculated Banano).<br />
-    Green: Distributed to Team Members (I.E. Coranos, Voted Best Dev 2021).<br />
+    Green: Distributed to Team Members.<br />
     Gray: Distributed to Unknown Parties (I.E. Addresses not on tipbots, and not
     linked to any known identites).<br />
     Grayish blue: Distributed to Known Parties (I.E. Tipbot Members, Former Team
